# mini_windows_taskbar_monitor

./: .gitignore  CMakeLists.txt  README.md  app.rc  app.rc.in  release.ps1
src/: app_config.cpp  app_config.h  main.cpp  process_monitor.cpp  process_monitor.h  resource.h  system_metrics.cpp  system_metrics.h  taskbar_embedder.cpp  taskbar_embedder.h
tools/: generate_app_icon.ps1
